# event-sourcing

./: README.md  cli.py  plan.md  pyproject.toml
api/: __init__.py  main.py
api_driven/: README.md  __init__.py  demo.py  models.py  notification_api.py
api_driven/services/: __init__.py  billing.py  ordering.py  pricing.py  promotions.py
comparison/: __init__.py  analysis.md  run_scenarios.py
data/: carts.json  customers.json  notification_preferences.json  orders.json  payments.json  products.json
event_sourced/: README.md  __init__.py  demo.py  event_bus.py  event_correlator.py  events.py  notification_service.py
event_sourced/services/: __init__.py  billing.py  ordering.py  pricing.py  promotions.py
shared/: __init__.py  channels.py  data_store.py  models.py  templates.py
tests/: __init__.py  conftest.py
tests/test_api_driven/: __init__.py  test_notification_api.py  test_order_complete.py  test_price_drop_alert.py  test_simple_notification.py
tests/test_event_sourced/: __init__.py  test_event_bus.py  test_order_complete.py  test_price_drop_alert.py  test_simple_notification.py
tests/test_shared/: test_channels.py  test_data_store.py  test_models.py  test_templates.py
